// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "dehydratedState": {
      "mutations": [],
      "queries": [],
    },
    "error": {
      "message": "",
    },
    "hasRegisteredSuccessfully": false,
    "isError": false,
    "isLoading": false,
  },
}
`;

exports[`Home page should match the snapshot 1`] = `
<div>
  <div />
  <div
    data-testid="SearchPage"
  />
</div>
`;

exports[`Home page should match the snapshot with user details  business undefined 1`] = `
<div>
  <div />
</div>
`;

exports[`Home page should match the snapshot with user details undefined 1`] = `
<div>
  <div />
</div>
`;
